apps/todolist-mongo-go/templates/todolist_deploymentconfig.yaml

apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: todolist
  namespace: mongo-persistent
  labels:
    app: todolist
    deploymentconfig: todolist-mongo-go
spec:
  selector:
    app: todolist
  strategy:
    type: Rolling
  triggers:
    - type: ConfigChange
      imageChangeParams:
        containerNames:
          - todolist
        from:
          kind: ImageStreamTag
          namespace: mongo-persistent
          name: 'todolist-mongo-go:latest'
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - todolist
        from:
          kind: ImageStreamTag
          namespace: mongo-persistent
          name: 'todolist-mongo-go:latest'
  replicas: 1
  template:
    metadata:
      creationTimestamp:
      labels:
        e2e-app: "true"
        app: todolist
    spec:
      containers:
      - name: todolist
        image:  >-
          image-registry.openshift-image-registry.svc:5000/mongo-persistent/todolist-mongo-go
        ports:
          - containerPort: 8000
            protocol: TCP
