apps/todolist-mongo-go/templates/todolist_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolist
  namespace: mongo-persistent
  labels:
    app: todolist
    service: todolist
  annotations:
    app: todolist
spec:
  ports:
    - name: web
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: todolist
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
